add answers,votes,views for each question

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,35 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.counters{
+    margin-right: 30px;
+    font-size: 10px;
+    text-align: center;
+
+    strong{
+        font-size: 16px;
+        display: block;
+    }
+    .votes .answers{
+        width: 60px;
+        height: 60px;
+    }
+
+    .answers{
+        padding: 5px;
+        border-radius: 3px;
+
+        &.answer-accepted{
+            background-color: $green;
+            color: $white;
+        }
+        &.answered{
+            border: 1px solid $green;
+            color: $green;
+        }
+        &.unanswered{
+            border: none;
+        }
+    }
+}
